cmake_minimum_required(VERSION 3.30)
project(DSproject)

set(CMAKE_CXX_STANDARD 23)
include_directories(headers)
include_directories(source)
add_executable(DSproject main.cpp)
find_package(folly CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
target_link_libraries(DSproject PRIVATE folly glog gflags fmt)
target_link_libraries(DSproject PRIVATE nlohmann_json::nlohmann_json)
